# merchant

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  dist-workspace.toml
.github/workflows/: build.yml  release.yml  test.yml
ansi-commands/: Cargo.toml
ansi-commands/src/: cursor.rs  event.rs  frame.rs  lib.rs  macros.rs  style.rs  terminal.rs
captured_write/: Cargo.toml
captured_write/src/: lib.rs
core/: Cargo.toml
core/src/: engine.rs  lib.rs  logging.rs
core/src/components/: components.rs  frame.rs  game_end_screen.rs  introduction_screen.rs  mod.rs  require_resize.rs  screen_centered_text.rs  splash_screen.rs
core/src/state/: constants.rs  good.rs  goods_map.rs  inventory.rs  location.rs  location_personalities.rs  locations.rs  mod.rs  price_ranges.rs  rng.rs
core/src/test/: integration_cases.rs  render_component.rs  test_engine.rs
game/: Cargo.toml
game/src/: components.rs  draw.rs  engine.rs  logging.rs  macros.rs  main.rs  renderer.rs  state.rs  update.rs
game/src/components/: components.rs  frame.rs  game_end_screen.rs  introduction_screen.rs  mod.rs  require_resize.rs  screen_centered_text.rs  splash_screen.rs
game/src/state/: error.rs  game_state.rs  good.rs  inventory.rs  location.rs  location_map.rs  locations.rs  mod.rs  price_ranges.rs  rng.rs
game/src/test/: integration_cases.rs  mod.rs  render_component.rs  rng.rs  test_engine.rs
game/wix/: main.wxs
raw_format_ansi/: Cargo.toml
raw_format_ansi/src/: lib.rs
src/: captured_write.rs  draw.rs  main.rs  raw_format_ansi.rs  state.rs  update.rs
src/test/: mod.rs  raw_format_ansi.rs  test_engine.rs
web/: Cargo.toml  bacon.toml
web/merchant-web/: index.html  package-lock.json  package.json  vite.config.ts
web/merchant-web/src/: main.ts
web/src/: html_engine.rs  html_renderer.rs  lib.rs
