[workspace]
members = ["game", "captured_write", "raw_format_ansi"]
resolver = "2"

[profile.release]
debug = 0       # do not include debug symbols
opt-level = "z" # optimize for small compiled binary size

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

[workspace.dependencies]
crossterm = { version = "0.28.1" }
