[package]
name = "merchant"
description = "A terminal UI game."
version = "0.4.1"
edition = "2021"
repository = "https://github.com/samgqroberts/merchant"
homepage = "https://github.com/samgqroberts/merchant"
authors = ["Sam Roberts"]

[package.metadata.wix]
upgrade-guid = "F4AED3DF-33E5-4EEA-964D-9BCEE61F3280"
path-guid = "639FE90B-10F2-40E8-938E-9B26743A991A"
license = false
eula = false

[dependencies]
chrono = "0.4.38"
crossterm = { workspace = true }
rand = "0.8.5"
captured_write = { path = "../captured_write" }
raw_format_ansi = { path = "../raw_format_ansi" }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ['env-filter'] }
tracing-appender = "0.2.3"

[dev-dependencies]
pretty_assertions = "1.4.1"
